<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.papyrus.moka</groupId>
	<artifactId>org.eclipse.papyrus.moka.parent</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	
	<!-- Project aggregation: any command executed against the parent is also executed against each declared module -->
	<packaging>pom</packaging>
	
	<properties>
		<!-- plugins versions -->
		<!-- use 'mvn versions:display-plugin-updates' to check for the latest -->
		<tycho-version>0.24.0</tycho-version>
		<tychoExtrasVersion>0.24.0</tychoExtrasVersion>
		<maven-checkstyle-version>2.12.1</maven-checkstyle-version>
		<maven-findbugs-version>3.0.0</maven-findbugs-version>
		<maven-pmd-version>3.1</maven-pmd-version>
		<maven-jxr-version>2.3</maven-jxr-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mylyn.wikitext.version>2.4.0-SNAPSHOT</mylyn.wikitext.version>
		<!-- Eclipse properties -->
		<eclipse.release>neon</eclipse.release>

		<!-- Platform properties -->
		<env.ui.test>-Xms512m -Xmx2048m -XX:MaxPermSize=512M</env.ui.test>
		
		<testConfig>CI_TESTS_CONFIG</testConfig> <!-- See org.eclipse.papyrus.junit.framework.classification.ClassificationConfig -->
	</properties>
	
	<name>Moka</name>
	<description>Papyrus model execution platform</description>

	<modules>
		<!-- moka core -->
		<module>org.eclipse.papyrus.moka</module>
		<module>org.eclipse.papyrus.moka.ui</module>
		<!-- moka engines -->
		<module>org.eclipse.papyrus.moka.fuml</module>
		<module>org.eclipse.papyrus.moka.fuml.interfaces</module>
		<module>org.eclipse.papyrus.moka.composites</module>
		<module>org.eclipse.papyrus.moka.composites.interfaces</module>
		<module>org.eclipse.papyrus.moka.async.fuml</module>
		<!-- moka services -->
		<module>org.eclipse.papyrus.moka.service</module>
		<module>org.eclipse.papyrus.moka.debug</module>
		<module>org.eclipse.papyrus.moka.animation</module>
		<!-- moka utils -->
		<module>org.eclipse.papyrus.moka.utils</module>
		<module>org.eclipse.papyrus.moka.fuml.validation</module>
		<module>org.eclipse.papyrus.moka.composites.utils</module>
		<!-- <module>org.eclipse.papyrus.moka.fuml.activeobjectcontrollerlibrary</module> -->
		<!-- moka libraries -->
		<module>org.eclipse.papyrus.moka.fuml.assertionlibrary</module>
		<module>org.eclipse.papyrus.moka.fuml.standardlibrary</module>
		<!-- moka methodology -->
		<module>org.eclipse.papyrus.moka.simex</module>
		<!-- Releng (contains feature definition) -->
		<module>releng</module>
		<!-- Target platform against which the build is performed -->
		<module>targetplatform</module>
	</modules>

	<pluginRepositories>
		<pluginRepository>
			<id>eclipse-maven-releases</id>
			<url>https://repo.eclipse.org/content/repositories/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>eclipse.org-mylyn</id>
			<url>https://repo.eclipse.org/content/repositories/mylyn/</url>
		</pluginRepository>			
	</pluginRepositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>2.18.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<!-- enable tycho build extension -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho-version}</version>
					<extensions>true</extensions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin><!-- enable source bundle generation -->
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-source-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-source-feature-plugin</artifactId>
					<version>${tychoExtrasVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-versions-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-pack200a-plugin</artifactId>
					<version>${tychoExtrasVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-pack200b-plugin</artifactId>
					<version>${tychoExtrasVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.cbi.maven.plugins</groupId>
					<artifactId>eclipse-jarsigner-plugin</artifactId>
					<version>1.1.2</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<optimize>true</optimize>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<!-- enable tycho build extension -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-repository-plugin</artifactId>
			</plugin>
			<plugin><!-- enable source bundle generation -->
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho.extras</groupId>
				<artifactId>tycho-source-feature-plugin</artifactId>
				<executions>
					<execution>
						<id>source-feature</id>
						<phase>package</phase>
						<goals>
							<goal>source-feature</goal>
						</goals>
						<!-- <configuration> <excludes> <plugin id="org.eclipse.papyrus.sysml14.rcp" 
							/> </excludes> </configuration> -->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-p2-metadata</id>
						<phase>package</phase>
						<goals>
							<goal>p2-metadata</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<configuration>
					<testClass>org.eclipse.papyrus.moka.tests.AllTests</testClass>
					<failIfNoTests>false</failIfNoTests>
					<useUIHarness>true</useUIHarness>
					<useUIThread>true</useUIThread>
					<argLine>-Xms512m -Xmx2048m</argLine>
					<appArgLine>-testConfig=${testConfig}</appArgLine>
					<product>org.eclipse.sdk.ide</product>
					<application>org.eclipse.ui.ide.workbench</application>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<configuration>
					<includePackedArtifacts>true</includePackedArtifacts>
					<targetDefinitionIncludeSource>honor</targetDefinitionIncludeSource>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
					<target>
						<artifact>
							<groupId>org.eclipse.papyrus.moka</groupId>
							<artifactId>org.eclipse.papyrus.moka.targetplatform.${eclipse.release}</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<!-- This profile is used because javadoc generator with jdk 1.8 is more 
			stringeant. We could deactivate it when the javadoc has been updated with 
			the new standard of java 1.8 -->
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-report-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-site-plugin</artifactId>
						<configuration>
							<reportPlugins>
								<plugin>
									<groupId>org.apache.maven.plugins</groupId>
									<artifactId>maven-javadoc-plugin</artifactId>
									<configuration>
										<additionalparam>-Xdoclint:none</additionalparam>
									</configuration>
								</plugin>
								<plugin>
									<groupId>org.apache.maven.plugins</groupId>
									<artifactId>maven-surefire-report-plugin</artifactId>
								</plugin>
							</reportPlugins>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-XstartOnFirstThread ${env.ui.test}</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>${env.ui.test}</ui.test.vmargs>
			</properties>
		</profile>
	</profiles>
</project>